ansible-k8s/roles/bitnami-kube-prod-runtime/splitted_manifests/graphana/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    name: grafana
  name: grafana
  namespace: kubeprod
spec:
  ports:
  - name: dashboard
    port: 3000
    targetPort: 3000
  selector:
    name: grafana
  type: ClusterIP
